<resources>
    <string name="app_name">food.ly</string>
    <string name="logintext">Proceed with your</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="donthaveaccount">Don\'t have account? Sign Up</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Email">Email</string>
    <string name="signup">Sign Up</string>
    <string name="alreadyhaveaccount">Already have account? Login</string>
    <string name="title_activity_admin_dashboard">admin_dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="orders">Orders</string>
    <string name="addfood">Add Item</string>
    <string name="updatefood">Update Item</string>
    <string name="list">List</string>
    <string name="add">Add</string>
    <string name="Price">Price</string>
    <string name="Name">Name</string>
    <string name="Delete">Delete</string>
    <string name="PlaceOrder">Place Order</string>
    <string name="Order">Order</string>
    <string name="Quantity">Quantity</string>
    <string name="title_activity_tabbed">tabbed</string>
    <string name="Orders">Orders</string>
    <string name="Items">Items</string>
    <string name="title_activity_tabbled">tabbled</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="addAdmin">Add Admin</string>
</resources>
