<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".adminDashboard">

    <TextView
        android:id="@+id/welcomemsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnItemList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:layout_marginBottom="20sp"
        android:layout_weight="1"
        android:background="#e20030"
        android:text="@string/Items"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnfoodAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:layout_weight="1"
        android:background="#e20030"
        android:text="@string/addfood"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnOrders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:layout_weight="1"
        android:background="#e20030"
        android:text="@string/Orders"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnaddAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:layout_weight="1"
        android:background="#e20030"
        android:text="@string/addAdmin"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />
</androidx.appcompat.widget.LinearLayoutCompat>