<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30sp"
    android:layout_marginRight="30sp"
    android:clickable="false"
    android:orientation="vertical"
    tools:context=".addFood">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/addfood"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65sp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/itemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="@string/Name"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/txtitemName"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:inputType="text"
            android:textColor="#000000"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="@string/Price"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/txtlPrice"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:inputType="number"
            android:shadowColor="#000000"
            android:textColor="#000000"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAddFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#e20030"
            android:text="@string/add"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>